ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP Virtual Server.
    virtual-server.f5.com/ip: "192.168.100.151"
    # Specify the BIG-IP partition containing the virtual server
    virtual-server.f5.com/partition: "f5-bigip-cltr"
spec:
  # Provide the IngressClassName as "f5"
  ingressClassName: f5
  defaultBackend:
    # The name of the Kubernetes Service you want to expose to external traffic
    service:
      name: f5-hello-world
      port:
        number: 8080
